--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-jumpups-irc
+standup-irc
 ===========
 
 Summary
@@ -6,8 +6,8 @@ Summary
 
 The irc bot to got with [Standup](https://github.com/rlr/standup).
 
-* **Code:** https://github.com/mythmon/jumpups-irc
-* **Issues:** https://github.com/mythmon/jumpups-irc/issues
+* **Code:** https://github.com/mythmon/standup-irc
+* **Issues:** https://github.com/mythmon/standup-irc/issues
 * **License:** BSD
 
 
@@ -16,8 +16,8 @@ Install
 
 Clone the repository:
 
-    $ git clone https://github.com/mythmon/jumpups-irc
-    $ cd jumpups-irc
+    $ git clone https://github.com/mythmon/standup-irc
+    $ cd standup-irc
 
 Get the dependencies:
 
@@ -27,7 +27,7 @@ Get the dependencies:
 Configure
 ---------
 
-Next you need to configure jumpups-irc:
+Next you need to configure standup-irc:
 
     $ cp config.ini.example config.ini
 
@@ -42,8 +42,8 @@ Run
 
 After you've configured it, you can run it like this:
 
-    $ node jumpups-irc.js
+    $ node standup-irc.js
 
 Alternatively, you can run this by specifying the config file explicitly:
 
-    $ node jumpups-irc.js --config=/path/to/config.ini
+    $ node standup-irc.js --config=/path/to/config.ini
